--- a/package.json
+++ b/package.json
@@ -10,18 +10,29 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.15",
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@stream-io/node-sdk": "^0.4.9",
     "@stream-io/video-react-sdk": "^1.10.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.473.0",
     "next": "14.2.23",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
+    "react-resizable-panels": "^2.1.7",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
